--- a/pom.xml
+++ b/pom.xml
@@ -88,11 +88,17 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>com.google.inject</groupId>
-			<artifactId>guice</artifactId>
-			<version>3.0</version>
-			<classifier>no_aop</classifier>
-		</dependency>
+        <groupId>com.google.inject</groupId>
+        <artifactId>guice</artifactId>
+        <version>3.0</version>
+        <classifier>no_aop</classifier>
+        <exclusions>
+            <exclusion>
+                <artifactId>aopalliance</artifactId>
+                <groupId>aopalliance</groupId>
+            </exclusion>
+        </exclusions>
+    </dependency>
 		<dependency>
 			<groupId>com.sun.jersey</groupId>
 			<artifactId>jersey-client</artifactId>
