--- a/pom.xml
+++ b/pom.xml
@@ -87,7 +87,12 @@
 	</distributionManagement>
 
 	<dependencies>
-		
+		<dependency>
+  <groupId>com.google.inject</groupId>
+  <artifactId>guice</artifactId>
+  <version>4.0-beta</version>
+  <classifier>no_aop</classifier>
+</dependency>
 		<dependency>
 			<groupId>com.sun.jersey</groupId>
 			<artifactId>jersey-client</artifactId>
