--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,11 @@
 	</distributionManagement>
 
 	<dependencies>
+	<dependency>
+  <groupId>de.mindpipe.android</groupId>
+  <artifactId>android-logging-log4j</artifactId>
+  <version>1.0.3</version>
+</dependency>
 		<dependency>
   <groupId>com.google.inject</groupId>
   <artifactId>guice</artifactId>
